--- a/contrib/packaging/wix/mercurial.wxs
+++ b/contrib/packaging/wix/mercurial.wxs
@@ -100,7 +100,7 @@
         <ComponentRef Id='ProgramMenuDir' />
         <ComponentGroupRef Id="hg.group.ROOT" />
         <ComponentGroupRef Id="hg.group.hgrc.d" />
-        <ComponentGroupRef Id="hg.group.help" />
+        <ComponentGroupRef Id="hg.group.helptext" />
         <ComponentGroupRef Id="hg.group.lib" />
         <ComponentGroupRef Id="hg.group.templates" />
         <MergeRef Id='VCRuntime' />
